<resources>
    <string name="app_name">udemy-clone</string>
    <string name="todo">Todo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jhon_kumar">Jhon Kumar\n</string>
    <string name="email_id">jhonkumar@gmail.com\n</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="faq">FAQs</string>
    <string name="about">About</string>
    <string name="privacy">Privay</string>
    <string name="share_app">Share App</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="basic_information">Basic Information</string>
    <string name="full_name">Full Name</string>
    <string name="bio">Bio</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="security">Account Security</string>
    <string name="payment_method">Payment Methods</string>
    <string name="subs">Subscription</string>
    <string name="download_option">Downlpoad Option</string>
    <string name="video_playback">Video Playback Option</string>
    <string name="learning_reminder">Learning Reminder</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="intellectual_property_policy">Intellectual Property Policy</string>
    <string name="close_account">Close Accoutn</string>
    <string name="close">Close</string>
    <string name="choose_reasion">Choose Reason</string>
    <string name="txt_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="account_security">Account Security</string>
    <string name="email_password">Email &amp; Password</string>
    <string name="email">Email ID</string>
    <string name="change_pass">Change password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="personal_plans">Personal Plans</string>
    <string name="buy_plan">Buy Plan</string>
    <string name="team_plans">Team Plans</string>
    <string name="checkout">Checkout</string>
    <string name="monthly_access">Monthly Access</string>
    <string name="yearly_access">Yearly Access</string>
    <string name="billing_address">Billing address</string>
    <string name="country">Country</string>
    <string name="india">India</string>
    <string name="state">State</string>
    <string name="select_state">Select State</string>
    <string name="credit_debit">Credit or Debit Cards</string>
    <string name="net_banking">Net Banking</string>
    <string name="upi">UPI</string>
    <string name="summary">Summary</string>
    <string name="total_amount">Total Amount :</string>
    <string name="start_subscription">Start Subscription</string>
    <string name="view_all_plam">View all plans</string>
    <string name="active_plan">Yout active subscription plan</string>
    <string name="valid_till">Valid Till :</string>
    <string name="valid_date">03 Sep 2024</string>
    <string name="specification">Specification</string>
    <string name="video_download_quality">Video download quality</string>
    <string name="download_wifi">Download over wi fi only</string>
    <string name="other">Other :</string>
    <string name="other_storage">65.3 GB</string>
    <string name="my_reminders">My reminders</string>
    <string name="reminder_title">UI Class</string>
    <string name="time">Time :</string>
    <string name="frequency">Frequency :</string>
    <string name="reminder_details">Reinder Details</string>
    <string name="name">Name</string>
    <string name="time1">Time</string>
    <string name="frequency1">Frequency</string>
    <string name="update">UPDATE</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="txt_delete_reminder">Are you sure you want to delete?</string>
    <string name="enter_reminder_name">Enter Reminder Name</string>
    <string name="reminder_frequency">Reminder Frequency</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="email_phone">Email Or Phone</string>
    <string name="pass">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="log_in">Log In</string>
    <string name="dont_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="have_account">If you have an account?</string>
    <string name="login_now">Login now</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="send_code">Send Code</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="dont_recevied_code">Didn’t received code?</string>
    <string name="resend">Resend</string>
    <string name="verify">Veerify</string>
    <string name="cfreate_new_pass">Create New Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="pass_change">Password Changed!</string>
    <string name="back_to_login">Back To Login</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="refresh">Refresh</string>
    <string name="my_course">My Courses</string>
    <string name="search">Search...</string>
    <string name="course_name">Advertisement Design</string>
    <string name="course_title">Graphic Design</string>
    <string name="course_duration">2 Hrs 36 mins</string>
    <string name="completed">Completed</string>
    <string name="section">Section 01 -</string>
    <string name="introduction">Introduction</string>
    <string name="section_time">25 Mins</string>
    <string name="txtCourseField">Development</string>
</resources>