<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_horizontal"
    tools:context=".ui.activity.ReminderDetailsActivity">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/reminder_details"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_main"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/name"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/etReminderTitleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rbxcounter_input_field"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/reminder_title"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/time1"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/etReminderTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rbxcounter_input_field"
                android:fontFamily="@font/poppins_medium"
                android:hint="20:20"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/frequency1"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/etReminderFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rbxcounter_input_field"
                android:fontFamily="@font/poppins_medium"
                android:hint="Daily"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:id="@+id/btnDeleteReminder"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_reminder"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/red"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>